--- a/app/views/home/_landing.html.erb
+++ b/app/views/home/_landing.html.erb
@@ -66,7 +66,7 @@
                 <h3 class="title title-h3">Leave</h3>
             <% end %>
             <p class="text-left">
-              Beaccount has a global leave module.It set leave system for any company world wide. Employees does't need
+              Mihisoft HR has a global leave module.It set leave system for any company world wide. Employees does't need
               a paper based leave history or leave application form.<br>
             </p>
 
