--- a/app/assets/stylesheets/company.scss
+++ b/app/assets/stylesheets/company.scss
@@ -9,7 +9,7 @@ $malibu: #048ABB;
     margin: auto;
     .actions-button {
       button {
-        color: #074E66;
+        color: darkcyan;
         font-weight: bold;
       }
       .add-button {
@@ -37,7 +37,7 @@ $malibu: #048ABB;
         font-weight: bolder;
         font-size: 15px;
         padding-bottom: 5px;
-        color: #074E66;
+        color: darkcyan;
       }
       input {
         padding-top: 5px;
