--- a/app/assets/stylesheets/designations.scss
+++ b/app/assets/stylesheets/designations.scss
@@ -6,7 +6,7 @@
   padding: 10px 0 10px 0;
   max-width: 92%;
   .heading {
-    color: #074E66;
+    color: darkcyan;
     h4{
       font-weight: bold;
     }
