--- a/app/assets/stylesheets/employees.scss
+++ b/app/assets/stylesheets/employees.scss
@@ -119,7 +119,7 @@ $table-bg-color: #2c7f96;
           font-size: 1.25em;
           padding-top: 3px;
           margin-left: 60px;
-          color: #0C6A85;
+          color: darkslategray;
           outline: none !important;
         }
         .user-designation {
@@ -283,7 +283,7 @@ $table-bg-color: #2c7f96;
   .wizard-card-container {
     h3 {
       border-bottom: 1px solid #c2c2c2;
-      color: #0c6a85;
+      color: darkslategray;
       font-weight: 400;
       margin-bottom: 20px;
       margin-top: 40px;
