--- a/app/assets/stylesheets/public_variables.scss
+++ b/app/assets/stylesheets/public_variables.scss
@@ -1,7 +1,7 @@
 
 /* Beaccount Color Declaration */
-$primary-color: #074e66;
-$hover-color: #0c6a85;
+$primary-color: darkcyan;
+$hover-color: darkslategray;
 $guest-color: #00BBEA;
 $secondary-guest-color :#129894;
 $default-background: #f7f7f7;
