--- a/app/assets/stylesheets/sign_up.scss
+++ b/app/assets/stylesheets/sign_up.scss
@@ -2,7 +2,7 @@
 @import "public_variables";
 
 .submit-btn {
-  background: #074e66 none repeat scroll 0 0;
+  background: darkcyan none repeat scroll 0 0;
   border: inherit;
   color: #fff;
   height: 41px;
@@ -100,7 +100,7 @@
 
 .progress-outline {
   background: #fff none repeat scroll 0 0;
-  border: 2px solid #074e66;
+  border: 2px solid darkcyan;
   border-radius: 50%;
   bottom: 28px;
   display: block;
