--- a/app/views/home/_landing.html.erb
+++ b/app/views/home/_landing.html.erb
@@ -10,7 +10,7 @@
           <br/>
           Choose your module/s that fits best for your organization and your requirement, from the multiple options.
         </p>
-        <%= link_to take_a_tour_path, class: 'btn-with-hover' do %>
+        <%= link_to pricing_path, class: 'btn-with-hover' do %>
             Read More..
         <% end %>
       </div>
