--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -19,7 +19,7 @@
             </div>
             <div class='content'>
               <div class='sub-title'>
-                Free
+                BDT 1000
               </div>
               <ul>
                 <li> Employee’s hourly schedule</li>
@@ -46,7 +46,7 @@
             </div>
             <div class='content'>
               <div class='sub-title'>
-                Free
+                BDT 1000
               </div>
               <ul>
                 <li> Category and dashboard</li>
@@ -73,7 +73,7 @@
             </div>
             <div class='content'>
               <div class='sub-title'>
-                Free
+                BDT 1000
               </div>
               <ul>
                 <li> Attendance time schedule settings</li>
@@ -100,7 +100,7 @@
             </div>
             <div class='content'>
               <div class='sub-title'>
-                Free
+                BDT 1000
               </div>
               <ul>
                 <li> Salary category</li>
@@ -127,7 +127,7 @@
             </div>
             <div class='content'>
               <div class='sub-title'>
-                Free
+                BDT 1000
               </div>
               <ul>
                 <li> To support HR</li>
@@ -154,7 +154,7 @@
             </div>
             <div class='content'>
               <div class='sub-title'>
-                Free
+                BDT 1000
               </div>
               <ul>
                 <li> Expanse category and budgets</li>
