--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,6 @@
 <%= render 'shared/flash_message' %>
 <%= render 'shared/footers_selection' %>
 <%= render 'shared/feedback' %>
-<%= render 'shared/google_analytics' %>
+<%#= render 'shared/google_analytics' %>
 </body>
 </html>
