--- a/app/views/layouts/excel.html.erb
+++ b/app/views/layouts/excel.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Mihisoft</title>
+  <title>Mihisoft HR</title>
 </head>
 <body>
 <%= current_department.company.name %><br>
