--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -178,7 +178,7 @@
         <tbody>
         <tr>
           <td>
-            <table width="100%" bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="0" align="center" class="full" style="border-radius:5px 5px 0 0; background-color:#0C6A85;">
+            <table width="100%" bgcolor="#ffffff" border="0" cellspacing="0" cellpadding="0" align="center" class="full" style="border-radius:5px 5px 0 0; background-color:darkslategray;">
               <tbody>
               <tr>
                 <td height="29">&nbsp;</td>
@@ -190,7 +190,7 @@
                     <tr>
                       <td width="23" class="hide">&nbsp;</td>
                       <td height="75" class="inner" valign="middle">
-                        <a href='https://mhr.com'>
+                        <a href='http://mhr.mihisoft.com'>
                           <img width="180" height="61" src="<%= image_url('beaccount_white_icon.svg') %>">
                         </a>
                       </td>
@@ -292,7 +292,7 @@
         <tbody>
         <tr>
           <td>
-            <table width="100%" bgcolor="#0C6A85" border="0" cellspacing="0" cellpadding="0" align="center" class="full" style="border-radius:0 0 7px 7px;">
+            <table width="100%" bgcolor="darkslategray" border="0" cellspacing="0" cellpadding="0" align="center" class="full" style="border-radius:0 0 7px 7px;">
               <tbody>
               <tr>
                 <td height="18">&nbsp;</td>
@@ -313,7 +313,7 @@
                               </a>
                             </td>
                             <td align="center">
-                              <a href="http://twitter.com/becuent" style="margin-right: 10px; display:inline-block;">
+                              <a href="http://twitter.com/mhr" style="margin-right: 10px; display:inline-block;">
                                 <img src="<%= image_url('twitter.png') %>" width="32" height="atuo" alt="TW">
                               </a>
                             </td>
@@ -343,7 +343,7 @@
                           <tbody>
                           <tr>
                             <td align="center" style="font:12px Helvetica,  Arial, sans-serif; color:#ffffff;">
-                              mhr, Road #4, House #321, Mirpur DOHS <br/> Dhaka, Bangladesh <br/>
+                              MHR, Road #3, House #92, Mirpur Pallabi <br/> Dhaka, Bangladesh <br/>
 
                               <p style="margin: 5px 0 0 0;"> © <%= Date.today.year %><a href="http://syftet.com/" target="_blank" class="primary-link-style">Syftet</a>, All rights reserved </p>
                             </td>
