--- a/app/views/shared/_registration_footer.html.erb
+++ b/app/views/shared/_registration_footer.html.erb
@@ -7,8 +7,8 @@
             <% end %>
         </div>
         <div class="col-sm-6 col-md-6 copy-right-resigtration-footer">
-            <span>Aj</span>maf | © <%= Date.today.year %>
-            <a href="" target="_blank" class="primary-link-style">Mihisoft</a>, All rights reserved
+            <span>M</span>HR | © <%= Date.today.year %>
+            <a href="http://mihisoft.com" target="_blank" class="primary-link-style">Mihisoft</a>, All rights reserved
         </div>
         <div class="col-sm-3 col-md-3">
           <ul class="social-share">
