--- a/app/assets/stylesheets/billing/invoices.scss
+++ b/app/assets/stylesheets/billing/invoices.scss
@@ -165,7 +165,7 @@
       }
     }
     .bottom-border {
-      border-bottom: solid 1px #074e66;
+      border-bottom: solid 1px darkcyan;
     }
   }
   .preview-top {
