--- a/app/assets/stylesheets/feature_content.scss
+++ b/app/assets/stylesheets/feature_content.scss
@@ -13,7 +13,7 @@
       font-weight: bolder;
       font-size: 15px;
       padding-bottom: 5px;
-      color: #074E66;
+      color: darkcyan;
     }
     input {
       padding-top: 5px;
