--- a/app/assets/stylesheets/toggleable-sidebar.scss
+++ b/app/assets/stylesheets/toggleable-sidebar.scss
@@ -34,7 +34,7 @@
 }
 
 #sidebar {
-  background: #074E66;
+  background: darkcyan;
   position: absolute;
   width: 240px;
   height: 100%;
@@ -59,13 +59,13 @@
     a{
       font-size: 17px;
       font-weight: bold;
-      border-top: 1px solid #0C6A85;
+      border-top: 1px solid darkslategray;
     }
   }
 }
 
 .sidebar-menu-active{
-  background: #0C6A85;
+  background: darkslategray;
 }
 
 #sidebar ul li a {
@@ -75,14 +75,14 @@
   color: white;
   text-decoration: none;
   display: block;
-  border-bottom: 1px solid #0C6A85;
+  border-bottom: 1px solid darkslategray;
   -webkit-transition: background 0.3s ease-in-out;
   -moz-transition: background 0.3s ease-in-out;
   -ms-transition: background 0.3s ease-in-out;
   -o-transition: background 0.3s ease-in-out;
   transition: background 0.3s ease-in-out;
   &:hover {
-    background: #0C6A85;
+    background: darkslategray;
   }
 }
 
