--- a/app/views/layouts/dashboard.html.erb
+++ b/app/views/layouts/dashboard.html.erb
@@ -9,7 +9,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <script type="text/javascript" async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="canonical" href="https://www.mhr.com" />
+  <link rel="canonical" href="http://mhr.mihisoft.com" />
   <meta property="og:image" content="<%= image_url('landing_bg.png') %>"/>
   <%= csrf_meta_tags %>
 </head>
@@ -22,6 +22,6 @@
 <%= render 'shared/flash_message' %>
 <%= render 'shared/feedback' %>
 <%= render 'shared/modal' %>
-<%= render 'shared/google_analytics' %>
+<%#= render 'shared/google_analytics' %>
 </body>
 </html>
