--- a/app/views/home/_app_dashboard.html.erb
+++ b/app/views/home/_app_dashboard.html.erb
@@ -5,103 +5,199 @@
     </h4>
   </div>
 
-  <div class="content-body-wrapper secondary-color full-content-wrapper">
-    <div class="text-centerx table-cell">
-      <div id="app-dashboard-wrapper">
+  <div class=" content-body-wrapper# secondary-color# full-content-wrapper#">
+    <div class="text-centerx# table-cell#">
+      <div id="app-dashboard-wrapper#">
         <section class="company-module">
-          <h2> <%= current_company.name %>'s Modules </h2>
+          <div class="secondary-color" style="background-color: #fdfdfd">
+            <div class="content-body-wrapper">
+              <div class="row content-body_feature feature-table-wrapper mt0 asad">
+                <h2> <%= current_company.name %>'s Modules </h2>
+                <div class="row mt20#">
+                  <div class="col-md-2">
+                      <div class="module-section-container# card primary-color-bg" style="margin: 6px">
+                        <%= link_to employees_path, class: 'somethings' do %>
+                        <%#= image_tag('module_settings/employee.png') %>
+                          <div style="text-align: center">
+                            <%= image_tag('icon.svg', width: 45) %>
+                          </div>
+                          <p class="module-price text-center  mb0 white-color" style="font-size: 18px">
+                            Employee
+                          </p>
+                        <% end %>
+                    </div>
 
+                  </div>
+                  <% @company_modules.each do |app| %>
+                    <div class="col-md-2">
+                      <div class="module-section-container# card primary-color-bg" style="margin: 6px">
+                        <%= link_to app.feature.url, class: 'somethings' do %>
+                          <%#= image_tag(app.feature.logo) %>
+                          <div style="text-align: center">
+                            <%= image_tag('icon.svg', width: 45) %>
+                          </div>
+                          <p class="module-price text-center  mb0 white-color" style="font-size: 18px">
+                           <%= app.feature.name %>
+                          </p>
+                        <% end %>
+                      </div>
+                    </div>
+                  <% end %>
+                </div>
+              </div>
+            </div>
+          </div>
           <div>
-            <ul>
-
-              <li>
-                <%= link_to employees_path, class: 'somethings' do %>
-                    <%#= image_tag('module_settings/employee.png') %>
-                      <%= image_tag('icon.svg', width: 45) %>
-                    <p class="text-center">Employee</p>
-                <% end %>
-              </li>
-              <% @company_modules.each do |app| %>
-                  <li>
-                    <%= link_to app.feature.url, class: 'somethings' do %>
-                        <%#= image_tag(app.feature.logo) %>
-                      <%= image_tag('icon.svg', width: 45) %>
-                        <p class="text-center"><%= app.feature.name %></p>
-                    <% end %>
-                  </li>
-              <% end %>
-            </ul>
           </div>
         </section>
 
         <% if @available_modules.present? %>
-        <section class="available-module">
-          <h2> Available Modules </h2>
+          <section class="available-module#">
+            <div class="secondary-color" style="background-color: #fdfdfd">
+              <div class="content-body-wrapper">
+                <div class="row content-body_feature feature-table-wrapper mt0 asad">
+                  <h2> Available Modules </h2>
+                  <div class="row mt20#">
+                    <% @available_modules.each do |app| %>
+                      <div class="col-md-3">
+                        <div class="module-section-container card primary-color-bg" style="margin: 6px">
+                          <%= link_to settings_path, class: 'somethings' do %>
+                            <%#= image_tag(app.logo) %>
+                            <div style="text-align: center">
+                              <%= image_tag('icon.svg', width: 45) %>
+                            </div>
 
-          <div>
-            <ul>
-              <% @available_modules.each do |app| %>
-                  <li>
-                    <%= link_to settings_path, class: 'somethings' do %>
-                        <%#= image_tag(app.logo) %>
-                      <%= image_tag('icon.svg', width: 45) %>
-                        <p class="text-center"><%= app.name %></p>
+                            <p class="module-price text-center  mb0 white-color" style="font-size: 18px">
+                              <%= app.name %>
+                            </p>
+<!--                            <p class="text-center"><%#= app.name %></p>-->
+                          <% end %>
+                        </div>
+                      </div>
                     <% end %>
-                  </li>
-              <% end %>
-            </ul>
-          </div>
-        </section>
-            <% end %>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div>
+            </div>
+          </section>
+        <% end %>
 
-        <section class="upcoming-module">
-          <h2> Upcoming Modules </h2>
-
-          <div class="module-secondary-apps-item">
-            <ul>
-              <li>
-                <a>
-                    <%#= image_tag('module_settings/point_of_sale.png') %>
-                  <%= image_tag('icon.svg', width: 45) %>
-                    <p class="text-center">Point of Sale</p>
-                </a>
-              </li>
-
-              <li>
-                <a>
-                    <%#= image_tag('module_settings/projects.png') %>
-                  <%= image_tag('icon.svg', width: 45) %>
-                    <p class="text-center">Task Manager</p>
-                </a>
-              </li>
-
-              <li>
-                <a>
-                    <%#= image_tag('module_settings/performance.png') %>
-                  <%= image_tag('icon.svg', width: 45) %>
-                    <p class="text-center">Performance</p>
-                </a>
-              </li>
-
-              <li>
-                <a>
-                    <%#= image_tag('module_settings/timesheets.png') %>
-                  <%= image_tag('icon.svg', width: 45) %>
-                    <p class="text-center">Scheduling</p>
-                </a>
-              </li>
-
-              <li>
-                <a>
-                    <%#= image_tag('module_settings/plane.png') %>
-                  <%= image_tag('icon.svg', width: 45) %>
-                    <p class="text-center">Mass Mailling</p>
-                </a>
-              </li>
-            </ul>
-          </div>
-        </section>
       </div>
     </div>
   </div>
 </div>
+
+
+
+
+
+
+<!--<div class="site-container">-->
+<!--  <div class="header-wrapper">-->
+<!--    <h4>-->
+<!--      <span class="primary-color"> <%#= current_company.name %> </span> Module Dashboard-->
+<!--    </h4>-->
+<!--  </div>-->
+
+<!--  <div class="content-body-wrapper secondary-color full-content-wrapper">-->
+<!--    <div class="text-centerx table-cell">-->
+<!--      <div id="app-dashboard-wrapper">-->
+<!--        <section class="company-module">-->
+<!--          <h2> <%#= current_company.name %>'s Modules </h2>-->
+
+<!--          <div>-->
+<!--            <ul>-->
+
+<!--              <li>-->
+                <%#= link_to employees_path, class: 'somethings' do %>
+                  <%#= image_tag('module_settings/employee.png') %>
+                  <%#= image_tag('icon.svg', width: 45) %>
+<!--                  <p class="text-center">Employee</p>-->
+                <%# end %>
+<!--              </li>-->
+              <%# @company_modules.each do |app| %>
+<!--                <li>-->
+                  <%#= link_to app.feature.url, class: 'somethings' do %>
+                    <%#= image_tag(app.feature.logo) %>
+                    <%#= image_tag('icon.svg', width: 45) %>
+<!--                    <p class="text-center"><%#= app.feature.name %></p>-->
+                  <%# end %>
+<!--                </li>-->
+              <%# end %>
+<!--            </ul>-->
+<!--          </div>-->
+<!--        </section>-->
+
+        <%# if @available_modules.present? %>
+<!--          <section class="available-module">-->
+<!--            <h2> Available Modules </h2>-->
+
+<!--            <div>-->
+<!--              <ul>-->
+                <%# @available_modules.each do |app| %>
+<!--                  <li>-->
+                    <%#= link_to settings_path, class: 'somethings' do %>
+                      <%#= image_tag(app.logo) %>
+                      <%#= image_tag('icon.svg', width: 45) %>
+<!--                      <p class="text-center"><%#= app.name %></p>-->
+                    <%# end %>
+<!--                  </li>-->
+                <%# end %>
+<!--              </ul>-->
+<!--            </div>-->
+<!--          </section>-->
+        <%# end %>
+
+<!--        <section class="upcoming-module">-->
+<!--          <h2> Upcoming Modules </h2>-->
+
+<!--          <div class="module-secondary-apps-item">-->
+<!--            <ul>-->
+<!--              <li>-->
+<!--                <a>-->
+                  <%#= image_tag('module_settings/point_of_sale.png') %>
+                  <%#= image_tag('icon.svg', width: 45) %>
+<!--                  <p class="text-center">Point of Sale</p>-->
+<!--                </a>-->
+<!--              </li>-->
+
+<!--              <li>-->
+<!--                <a>-->
+                  <%#= image_tag('module_settings/projects.png') %>
+                  <%#= image_tag('icon.svg', width: 45) %>
+<!--                  <p class="text-center">Task Manager</p>-->
+<!--                </a>-->
+<!--              </li>-->
+
+<!--              <li>-->
+<!--                <a>-->
+                  <%#= image_tag('module_settings/performance.png') %>
+                  <%#= image_tag('icon.svg', width: 45) %>
+<!--                  <p class="text-center">Performance</p>-->
+<!--                </a>-->
+<!--              </li>-->
+
+<!--              <li>-->
+<!--                <a>-->
+                  <%#= image_tag('module_settings/timesheets.png') %>
+                  <%#= image_tag('icon.svg', width: 45) %>
+<!--                  <p class="text-center">Scheduling</p>-->
+<!--                </a>-->
+<!--              </li>-->
+
+<!--              <li>-->
+<!--                <a>-->
+                  <%#= image_tag('module_settings/plane.png') %>
+                  <%#= image_tag('icon.svg', width: 45) %>
+<!--                  <p class="text-center">Mass Mailling</p>-->
+<!--                </a>-->
+<!--              </li>-->
+<!--            </ul>-->
+<!--          </div>-->
+<!--        </section>-->
+<!--      </div>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</div>-->
