--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -18,8 +18,8 @@
                 <div class="module-style">
                   <%= link_to employees_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
                         <%#= image_tag 'module_settings/employee.png' %>
+                        <%= image_tag('module-common.png', class:'module-common') %>
                       </div>
                       <p> Employee </p>
                   <% end %>
@@ -27,7 +27,8 @@
                 <div class="module-style">
                   <%= link_to attendance_dashboard_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                        <%= image_tag('module-common.png', class:'module-common') %>
+                        
                         <%#= image_tag 'module_settings/attendance.png' %>
                       </div>
                       <p> Attendance </p>
@@ -37,7 +38,7 @@
                   <%= link_to leave_dashboard_path do %>
                       <div class="module-icon leave-module-pending-notification">
                         <%#= image_tag 'module_settings/leave.png' %>
-                        <%= image_tag('icon.svg', width: 45) %>
+                        <%= image_tag('module-common.png', class:'module-common') %>
                         <% unless leave_pending_notification <= 0 %>
                             <span> <%= leave_pending_notification %> </span>
                         <% end %>
@@ -48,7 +49,8 @@
                 <div class="module-style">
                   <%= link_to expense_dashboard_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                        <%= image_tag('module-common.png', class:'module-common') %>
+
                         <%#= image_tag 'module_settings/expense.png' %>
                       </div>
                       <p> Expense </p>
@@ -57,7 +59,7 @@
                 <div class="module-style">
                   <%= link_to provident_fund_dashboard_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                          <%= image_tag('module-common.png', class:'module-common') %>
                         <%#= image_tag 'module_settings/provident_fund.png' %>
                       </div>
                       <p> Provident Fund </p>
@@ -66,7 +68,7 @@
                 <div class="module-style">
                   <%= link_to payroll_dashboard_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                          <%= image_tag('module-common.png', class:'module-common') %>
                         <%#= image_tag 'module_settings/payroll.png' %>
                       </div>
                       <p> Payroll </p>
@@ -75,7 +77,7 @@
                 <div class="module-style">
                   <%= link_to bank_accounts_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                          <%= image_tag('module-common.png', class:'module-common') %>
                         <%#= image_tag 'module_settings/bank.png' %>
                       </div>
                       <p> Bank </p>
@@ -84,7 +86,7 @@
                 <div class="module-style">
                   <%= link_to billing_dashboard_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                          <%= image_tag('module-common.png', class:'module-common') %>
                         <%#= image_tag 'module_settings/billing.png' %>
                       </div>
                       <p> Billing </p>
@@ -93,7 +95,7 @@
                 <div class="module-style">
                   <%= link_to daily_progress_dashboard_path do %>
                       <div class="module-icon">
-                        <%= image_tag('icon.svg', width: 45) %>
+                          <%= image_tag('module-common.png', class:'module-common') %>
                         <%#= image_tag 'module_settings/projects1.png' %>
                       </div>
                       <p> Daily Progress </p>
@@ -107,7 +109,7 @@
     <% else %>
         <li>
           <%= link_to root_path, class: 'pt5 pb5' do %>
-            <%= image_tag('icon.svg', width: 45) %>
+              <%= image_tag('module-common.png', class:'module-common') %>
               <%#= image_tag('icon.svg', width: 32) %>
           <% end %>
         </li>
