--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -109,8 +109,8 @@
     <% else %>
         <li>
           <%= link_to root_path, class: 'pt5 pb5' do %>
-              <%= image_tag('module-common.png', class:'module-common') %>
-              <%#= image_tag('icon.svg', width: 32) %>
+              <%#= image_tag('module-common.png', class:'module-common') %>
+              <%= image_tag('icon.svg', width: 32) %>
           <% end %>
         </li>
     <% end %>
