--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -176,8 +176,8 @@
   <div class="copyright-footer">
     <div class="container">
       <div class="row">
-        <div class="textwidget"><span>M</span>HR | &copy; <%= Date.today.year %>
-          <a href="https://mihisoft.com/" target="_blank" class="primary-link-style">Mihisoft Technologies</a>, All rights reserved
+        <div class="textwidget">HR<span>M</span> | &copy; <%= Date.today.year %>
+          <a href="http://mihisoft.com/" target="_blank" class="primary-link-style">Mihisoft Technologies Ltd.</a>, All rights reserved
           <%= link_to 'Privacy & Policy', terms_and_conditions_path, target: '_blank' %>
         </div>
       </div>
